# pffp25

./: .buildinfo  README.md  genindex.html  intro.html  markdown.html  notebooks.html  pffp.html  pyproject.toml  searchindex.js
_sources/: pffp.ipynb
exemplo-caderno/: _toc.yml
exemplo-caderno/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  pffp.doctree
exemplo-caderno/_build/html/: intro.html  search.html
exemplo-caderno/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
myfirstbook/: _config.yml  _toc.yml
myfirstbook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  pffp.doctree
myfirstbook/_build/html/: .buildinfo  genindex.html  markdown-notebooks.html  objects.inv  pffp.html  search.html  searchindex.js
myfirstbook/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb  pffp.ipynb
